--- a/package.json
+++ b/package.json
@@ -12,13 +12,11 @@
     "cookie": "^0.3.1",
     "dotenv": "^6.1.0",
     "express": "^4.16.4",
+    "forever": "^0.15.3",
     "mssql": "^4.2.3",
+    "node": "^9.2.0",
     "nonce": "^1.0.4",
     "request": "^2.88.0",
     "request-promise": "^4.2.2"
-  },
-  "engines": {
-    "node":"9.2.0",
-    "npm":"5.5.1" 
   }
 }
